# passkms

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  FINDINGS.md  LICENSE  PLAN.md  README.md  TASKS.md  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/passkms-core/: Cargo.toml
crates/passkms-core/src/: authenticator.rs  cose.rs  credential_store.rs  kms_signer.rs  lib.rs
crates/passkms-core/tests/: kms_integration.rs
crates/passkms-server/: Cargo.toml
crates/passkms-server/src/: main.rs
crates/passkms-windows/: Cargo.toml  Package.appxmanifest  build.rs  passkms.rc
crates/passkms-windows/src/: bindings.rs  com_factory.rs  com_plugin.rs  main.rs  registration.rs  util.rs
src/: main.rs
